--- a/saitae-web/src/main/webapp/pages/perfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/perfil.xhtml
@@ -5,11 +5,8 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-
     <body>
-
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
-
             <ui:define name="content">
                 <style type="text/css">
                     .value {
@@ -21,9 +18,10 @@
                     }
                 </style>
                 <h:form id="form">
-                    <p:carousel id="carousel" value="#{anuncioController.all}" headerText="Anuncios" var="ann" circular="true" 
-                                footerText="Total de anuncios: #{anuncioController.all.size()}." numVisible="1"
-                                itemStyle="text-align:center" autoPlayInterval="5000">
+                    <p:carousel id="carousel" value="#{anuncioController.individual}" 
+                                headerText="Anuncios" var="ann" circular="true" 
+                                footerText="Total de anuncios: #{anuncioController.individual.size()}." 
+                                numVisible="1" itemStyle="text-align:center" autoPlayInterval="30000">
                         <p:panelGrid columns="1" style="width:100%;margin:10px 0px" 
                                      columnClasses="label,value" layout="grid" 
                                      styleClass="ui-panelgrid-blank">
@@ -43,6 +41,5 @@
                 </h:form>
             </ui:define>
         </ui:composition>
-
     </body>
 </html>
