--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -11,7 +11,8 @@
         <link rel="shortcut icon" href="resources/img/intexM.jpeg"/>
         <h:outputStylesheet library="css" name="main.css"/>
     </h:head>
-    <h:body style="background-color: #323232; color: #ffffff"  class="home">
+    <!--style="background-color: #323232; color: #ffffff"  -->
+    <h:body class="home">
         <style>
             .centred-form{
                 margin: 8% auto;
