--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -231,8 +231,8 @@
                                         </f:facet>
                                         <f:facet name="input">
                                             <p:selectOneMenu value="#{g.gradoPK.gradoAño}">
-                                                <f:selectItem itemLabel="#{g.gradoPK.gradoAño}" itemValue="#{g.gradoPK.gradoAño}"/>
-                                                <f:selectItem itemLabel="#{g.gradoPK.gradoAño+1}" itemValue="#{g.gradoPK.gradoAño+1}"/>
+                                                <f:selectItem itemLabel="#{tipoController.año}" itemValue="#{tipoController.año}"/>
+                                                <f:selectItem itemLabel="#{tipoController.año+1}" itemValue="#{tipoController.año+1}"/>
                                             </p:selectOneMenu>
                                         </f:facet>
                                     </p:cellEditor>
