--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -20,7 +20,8 @@
                 align-items: center;
             }
         </style>
-        <h:form id="frm" style="width: 400px; height: 90%;" styleClass="centred-form">
+        <h:form id="frm" style="width: 400px; height: 90%;" styleClass="centred-form"
+                transient="true">
             <div class="ui-fluid">
                 <p:growl id="growl" showDetail="true"/>
                 <p:focus context="panel"/>
